# SuperNova-Search

./: .dockerignore  DEPLOYMENT.md  Dockerfile  Dockerfile.dev  Procfile  README.md  build.sh  docker-compose.yml  pyproject.toml  railway.json  railway.toml  render.yaml  requirements.txt  run.ps1  start.bat  start.sh  sync_database.py  test.sh
.github/workflows/: ci.yml
atomic_search/: cli.py  database.py  main.py  plugins.py  scheduler.py
atomic_search/ai/: local_ai.py
atomic_search/app/: __init__.py
atomic_search/app/static/css/: themes.css
atomic_search/app/templates/: ai.html  base.html  base.html.bak  compare.html  crawl.html  discover.html  hack.html  index.html  password.html  recipe.html  results.html  settings.html  summarize.html  time.html  tools.html  uuid.html  weather.html
atomic_search/config/: __init__.py
atomic_search/crawler/: __init__.py  production_crawler.py  railway_crawler.py  railway_indexer.py  seeds.txt  web_crawler.py
atomic_search/p2p/: __init__.py  node.py
atomic_search/routes/: api.py  main.py  search_enhancements.py  tools.py  user_features.py
atomic_search/search/: indexer.py
atomic_search/search/backends/: brave.py  ecosia.py  mojeek.py  swisscows.py
atomic_search/services/: search.py
atomic_search/utils/: cache.py  content_filter.py  helpers.py  metrics.py  privacy.py  proxy.py  rate_limiter.py  session.py
data/: supernova_index.db
